added social data assignment 2
removed old sarp files

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href='https://dk.linkedin.com/in/daniel-thoren'>My LinkedIn</a>
       </li>
       <li>
-        <a href='SARP'>SARP</a>
+        <a href='dannydannydanny.github.io/SARP/'>SARP Project for Qub</a>
       </li>
     </ul>
   </div>
